--- a/css/common.css
+++ b/css/common.css
@@ -1,7 +1,23 @@
+body {
+  background: #f5f5f5; }
+
 .navbar {
-  background-color: transparent; }
+  padding: 40px 180px;
+  background-color: transparent;
+  transition: all 1s; }
   .navbar a {
-    color: #fff; }
+    color: #fff;
+    transition: all 0.5s; }
+    .navbar a:hover {
+      color: #9a9a9a; }
+  .navbar li a:hover {
+    background-color: transparent; }
+  .navbar.move {
+    background-color: #102335;
+    padding: 0 20px; }
+    .navbar.move .container-fluid {
+      padding: 0 20px;
+      transition: all 1s; }
 
 .k-nav-title {
   margin-left: 10px; }
@@ -34,5 +50,13 @@
   100% {
     opacity: 1;
     -webkit-transform: translateY(0%); } }
+.top-arrow {
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  opacity: 0;
+  transition: opacity 1s; }
+  .top-arrow span {
+    font-size: 30px; }
 
 /*# sourceMappingURL=common.css.map */
