--- a/css/common.scss
+++ b/css/common.scss
@@ -3,10 +3,19 @@
 body{
     background: #f5f5f5;
 }
+
+.main-container{
+    overflow: hidden;
+}
+
 .navbar{
     padding: 40px 180px;
     background-color: rgba(0,0,0,0);
     transition: all 1s;
+    
+    .navbar-toggle .icon-bar{
+        background-color: #fff;
+    }
     
     a{
         color: #fff;
@@ -18,22 +27,26 @@ body{
         }
     }
     
-    li{
+    .nav{
         a{
-            &:hover{
+            &:hover, &:focus{
                 background-color: rgba(0,0,0,0);
             }
+        }
+    }
+    
+    &.smscreen{
+        padding: 0 25px;
+        
+        .navbar-collapse.in{
+            background: rgba(0,0,0,0.4);
+            transition: background 0.5s;
         }
     }
     
     &.move{
         background-color: #102335;
         padding: 0 20px;
-        
-        .container-fluid{
-            padding: 0 20px;
-            transition: all 1s;
-        }
     }
 }
 .k-nav-title{
