--- a/works/test_for_cucumber_Neal/src/css/index.css
+++ b/works/test_for_cucumber_Neal/src/css/index.css
@@ -8,55 +8,73 @@ body {
 .pics-current {
   width: 100%; }
 
-.pics-thumbnail:hover > div:after {
+.pics-thumbnail:hover > div .pics-inner:after {
   opacity: 1; }
 .pics-thumbnail > div {
-  height: 20vw;
-  padding: 0 2px;
-  overflow: hidden;
-  -webkit-transition: width 1s, transform 1.5s ease;
-  -moz-transition: width 1s, transform 1.5s ease;
-  -ms-transition: width 1s, transform 1.5s ease;
-  -o-transition: width 1s, transform 1.5s ease;
-  transition: width 1s, transform 1.5s ease;
+  height: 18vw;
+  padding-left: 0.15%;
+  padding-right: 0.15%;
+  margin-bottom: 10px;
   cursor: pointer; }
-  .pics-thumbnail > div:not(.spec-margin) {
-    margin: 0 1px; }
-  .pics-thumbnail > div:hover {
-    width: 16%;
-    border: 1px solid #777;
-    -webkit-box-shadow: 0 0 40px #fff;
-    -moz-box-shadow: 0 0 40px #fff;
-    -ms-box-shadow: 0 0 40px #fff;
-    -o-box-shadow: 0 0 40px #fff;
-    box-shadow: 0 0 40px #fff;
-    -webkit-transform: scale(1.2);
-    -moz-transform: scale(1.2);
-    -ms-transform: scale(1.2);
-    -o-transform: scale(1.2);
-    transform: scale(1.2);
-    z-index: 10; }
-  .pics-thumbnail > div:after {
-    content: "";
-    z-index: 1;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    opacity: 0.5;
-    -webkit-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    -ms-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    transition: opacity 0.5s; }
-  .pics-thumbnail > div:hover:after {
-    opacity: 0; }
-  .pics-thumbnail > div img {
-    width: 400%;
+  .pics-thumbnail > div .pics-inner {
     position: relative;
-    left: -135%; }
+    left: 0;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    -webkit-transition: left 1s, transform 1.5s;
+    -moz-transition: left 1s, transform 1.5s;
+    -ms-transition: left 1s, transform 1.5s;
+    -o-transition: left 1s, transform 1.5s;
+    transition: left 1s, transform 1.5s; }
+    .pics-thumbnail > div .pics-inner:after {
+      content: "";
+      z-index: 1;
+      position: absolute;
+      left: 1.8%;
+      top: 0;
+      width: 98.2%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      opacity: 0.5;
+      -webkit-transition: opacity 0.5s;
+      -moz-transition: opacity 0.5s;
+      -ms-transition: opacity 0.5s;
+      -o-transition: opacity 0.5s;
+      transition: opacity 0.5s; }
+    @media (max-width: 768px) {
+      .pics-thumbnail > div .pics-inner:after {
+        left: 0.9%;
+        width: 98.2%; } }
+    .pics-thumbnail > div .pics-inner:hover:after {
+      opacity: 0; }
+    .pics-thumbnail > div .pics-inner:hover {
+      border: 1px solid #777;
+      -webkit-box-shadow: 0 0 40px #fff;
+      -moz-box-shadow: 0 0 40px #fff;
+      -ms-box-shadow: 0 0 40px #fff;
+      -o-box-shadow: 0 0 40px #fff;
+      box-shadow: 0 0 40px #fff;
+      -webkit-transform: scale(1.2);
+      -moz-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+      -o-transform: scale(1.2);
+      transform: scale(1.2);
+      z-index: 10; }
+    .pics-thumbnail > div .pics-inner.active {
+      left: -135%;
+      z-index: 25; }
+      .pics-thumbnail > div .pics-inner.active img {
+        left: 0; }
+    .pics-thumbnail > div .pics-inner img {
+      width: 400%;
+      position: relative;
+      left: -135%;
+      -webkit-transition: left 1s;
+      -moz-transition: left 1s;
+      -ms-transition: left 1s;
+      -o-transition: left 1s;
+      transition: left 1s; }
 
 /* picture area end */
 .test-sm-block {
