--- a/works/test_for_cucumber_Neal/src/css/index.css
+++ b/works/test_for_cucumber_Neal/src/css/index.css
@@ -9,6 +9,32 @@ body {
   background: #f5f5f5; }
 
 /* menu area */
+.menu-item {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: #555;
+  cursor: pointer;
+  -webkit-transition: transform 0.2s;
+  -moz-transition: transform 0.2s;
+  -ms-transition: transform 0.2s;
+  -o-transition: transform 0.2s;
+  transition: transform 0.2s; }
+  .menu-item:hover {
+    background: #eee; }
+  .menu-item.current {
+    width: 104%;
+    color: #000;
+    border-right: 4px solid #71c3ce;
+    box-shadow: 2px 1px 10px;
+    z-index: 5; }
+  .menu-item.click {
+    -webkit-transform: translateX(5px);
+    -moz-transform: translateX(5px);
+    -ms-transform: translateX(5px);
+    -o-transform: translateX(5px);
+    transform: translateX(5px); }
+
 /* menu area end*/
 /* picture area */
 .pics-current {
@@ -32,7 +58,15 @@ body {
     -moz-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
     -ms-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
     -o-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
-    transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s; }
+    transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
+    border-top: 16px solid #000000; }
+    @media (max-width: 768px) {
+      .pics-thumbnail > .pics-container .pics-inner {
+        -webkit-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
+        -moz-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
+        -ms-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
+        -o-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
+        transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease; } }
     .pics-thumbnail > .pics-container .pics-inner:after {
       content: "";
       z-index: 1;
@@ -89,8 +123,16 @@ body {
       -o-transform: scale(1);
       transform: scale(1);
       opacity: 0; }
+    .pics-thumbnail > .pics-container .pics-inner.active2:hover {
+      border: none; }
     .pics-thumbnail > .pics-container .pics-inner.active-back {
       width: 100%; }
+    .pics-thumbnail > .pics-container .pics-inner.active-current {
+      -webkit-transform: scale(1.4);
+      -moz-transform: scale(1.4);
+      -ms-transform: scale(1.4);
+      -o-transform: scale(1.4);
+      transform: scale(1.4); }
     .pics-thumbnail > .pics-container .pics-inner.active-back.moving {
       width: 19.253125vw; }
     .pics-thumbnail > .pics-container .pics-inner .pics-img {
@@ -159,7 +201,35 @@ body {
   width: 25%;
   white-space: nowrap;
   border-bottom: 2px solid #6f6f6f;
-  padding-bottom: 10px; }
+  padding-bottom: 10px;
+  -webkit-transition: transform 0.8s, opacity 0.5s, text-shadow 1s;
+  -moz-transition: transform 0.8s, opacity 0.5s, text-shadow 1s;
+  -ms-transition: transform 0.8s, opacity 0.5s, text-shadow 1s;
+  -o-transition: transform 0.8s, opacity 0.5s, text-shadow 1s;
+  transition: transform 0.8s, opacity 0.5s, text-shadow 1s;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-text-shadow: 0px 0px 0px black;
+  -moz-text-shadow: 0px 0px 0px black;
+  -ms-text-shadow: 0px 0px 0px black;
+  -o-text-shadow: 0px 0px 0px black;
+  text-shadow: 0px 0px 0px black;
+  opacity: 1; }
+  .ctext-title.ctext-title-init {
+    -webkit-text-shadow: 10px 5px 7px black;
+    -moz-text-shadow: 10px 5px 7px black;
+    -ms-text-shadow: 10px 5px 7px black;
+    -o-text-shadow: 10px 5px 7px black;
+    text-shadow: 10px 5px 7px black;
+    -webkit-transform: translateX(200%);
+    -moz-transform: translateX(200%);
+    -ms-transform: translateX(200%);
+    -o-transform: translateX(200%);
+    transform: translateX(200%);
+    opacity: 0; }
 
 .ctext-content {
   color: #555;
@@ -175,7 +245,26 @@ body {
   -ms-box-shadow: 5px 5px 5px #79bcd6;
   -o-box-shadow: 5px 5px 5px #79bcd6;
   box-shadow: 5px 5px 5px #79bcd6;
-  border: 2px solid #71c3ce; }
+  border: 2px solid #71c3ce;
+  border-left: 69px solid #71c3ce;
+  -webkit-transition: transform 1s, opacity 0.5s;
+  -moz-transition: transform 1s, opacity 0.5s;
+  -ms-transition: transform 1s, opacity 0.5s;
+  -o-transition: transform 1s, opacity 0.5s;
+  transition: transform 1s, opacity 0.5s;
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transform: scale(1);
+  opacity: 1; }
+  .ctext-content.ctext-content-init {
+    -webkit-transform: scale(0.95);
+    -moz-transform: scale(0.95);
+    -ms-transform: scale(0.95);
+    -o-transform: scale(0.95);
+    transform: scale(0.95);
+    opacity: 0; }
 
 /* text area end */
 
