--- a/works/test_for_cucumber_Neal/src/scss/index.scss
+++ b/works/test_for_cucumber_Neal/src/scss/index.scss
@@ -23,6 +23,13 @@
    -o-box-shadow:$param;
    box-shadow:$param;
 }
+@mixin text-shadow($param...) {
+  -webkit-text-shadow:$param;
+   -moz-text-shadow:$param;
+   -ms-text-shadow:$param;
+   -o-text-shadow:$param;
+   text-shadow:$param;
+}
 @mixin border-radius($param...) {
   -webkit-border-radius:$param;
    -moz-border-radius:$param;
@@ -58,6 +65,31 @@ body{
 }
 
 /* menu area */
+
+.menu-item{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow : ellipsis;
+    color: #555;
+    cursor: pointer;
+    @include transition(transform 0.2s);
+    
+    &:hover{
+        background: #eee;
+    }
+    
+    &.current{
+        width: 104%;
+        color: #000;
+        border-right: 4px solid #71c3ce;
+        box-shadow: 2px 1px 10px;
+        z-index: 5;
+    }
+    
+    &.click{
+        @include transform(translateX(5px));
+    }
+}
 
 
 /* menu area end*/
@@ -119,6 +151,13 @@ body{
             width: 100%;
             overflow: hidden;
             @include transition(left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s);  //margin 1s
+            border-top: 16px solid #000000;
+            
+            @media (max-width: 768px){
+                &{
+                     @include transition(left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease);
+                }
+            }
             
             // explanation of this formula
             // $gap-before * 100% = x * $length-col-1
@@ -178,8 +217,16 @@ body{
                 opacity: 0;
             }
             
+            &.active2:hover{
+                border: none;
+            }
+            
             &.active-back{
                 width: 100%;
+            }
+            
+            &.active-current{
+                @include transform(scale(1.4));
             }
             
             // in case of some bugs caused by extremely quick mouse moving operation
@@ -238,11 +285,22 @@ body{
 /* picture area end */
 
 /* text area */
+   
 .ctext-title{
     width: 25%;
     white-space: nowrap;
     border-bottom: 2px solid #6f6f6f;
     padding-bottom: 10px;
+    @include transition(transform 0.8s, opacity 0.5s, text-shadow 1s);
+    @include transform(translateX(0));
+    @include text-shadow(0px 0px 0px black);
+    opacity: 1;
+    
+    &.ctext-title-init{
+        @include text-shadow(10px 5px 7px black);
+        @include transform(translateX(200%));
+        opacity: 0;
+    }
 }
 
 .ctext-content{
@@ -253,7 +311,17 @@ body{
     @include border-radius(10px 0 10px 0);
     @include box-shadow(5px 5px 5px #79bcd6);
     border: 2px solid #71c3ce;
+    border-left: 69px solid #71c3ce;
+    @include transition(transform 1s, opacity 0.5s);
+    @include transform(scale(1));
+    opacity: 1;
+    
+     &.ctext-content-init{
+        @include transform(scale(0.95));
+        opacity: 0;
+    }
 }
+
 /* text area end */
 
 
