--- a/works/test_for_cucumber_Neal/src/css/index.css
+++ b/works/test_for_cucumber_Neal/src/css/index.css
@@ -1,6 +1,7 @@
 /* common css */
 body {
-  margin-top: 65px; }
+  margin-top: 65px;
+  background: #f5f5f5; }
 
 .k-nav-title {
   padding-left: 15px; }
