--- a/works/test_for_cucumber_Neal/src/css/index.css
+++ b/works/test_for_cucumber_Neal/src/css/index.css
@@ -7,7 +7,7 @@ body {
   padding-left: 15px; }
 
 .bg-bottom {
-  background: #f5f5f5; }
+  background: #e7e7e7; }
 
 /* menu area */
 .menu-item {
@@ -36,6 +36,45 @@ body {
     -o-transform: translateX(5px);
     transform: translateX(5px); }
 
+@media (min-width: 768px) {
+  .menu-top {
+    display: none; } }
+.menu-top {
+  cursor: pointer; }
+  .menu-top:hover {
+    background: #eee; }
+  .menu-top .glyphicon {
+    -webkit-transition: transform 0.8s;
+    -moz-transition: transform 0.8s;
+    -ms-transition: transform 0.8s;
+    -o-transition: transform 0.8s;
+    transition: transform 0.8s; }
+    .menu-top .glyphicon.back {
+      -webkit-transform: rotateY(180deg);
+      -moz-transform: rotateY(180deg);
+      -ms-transform: rotateY(180deg);
+      -o-transform: rotateY(180deg);
+      transform: rotateY(180deg); }
+
+.menu-xs {
+  padding-left: 5px;
+  padding-right: 0; }
+  .menu-xs .menu-item {
+    padding-left: 5px;
+    text-overflow: clip; }
+  .menu-xs .menu-container {
+    width: 100%;
+    -webkit-transition: width 0.8s;
+    -moz-transition: width 0.8s;
+    -ms-transition: width 0.8s;
+    -o-transition: width 0.8s;
+    transition: width 0.8s; }
+  .menu-xs .menu-container.open1 {
+    position: absolute;
+    z-index: 100; }
+  .menu-xs .menu-container.open2 {
+    width: 260%; }
+
 /* menu area end*/
 /* picture area */
 .pics-current {
@@ -59,8 +98,7 @@ body {
     -moz-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
     -ms-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
     -o-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
-    transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s;
-    border-top: 16px solid #000000; }
+    transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s; }
     @media (max-width: 768px) {
       .pics-thumbnail > .pics-container .pics-inner {
         -webkit-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
@@ -68,6 +106,8 @@ body {
         -ms-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
         -o-transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease;
         transition: left 0.5s, width 1s ease 0.5s, transform 1.5s, opacity 0.8s ease; } }
+    .pics-thumbnail > .pics-container .pics-inner.ten {
+      display: none; }
     .pics-thumbnail > .pics-container .pics-inner:after {
       content: "";
       z-index: 1;
@@ -146,16 +186,19 @@ body {
       -o-transition: left 1s;
       transition: left 1s; }
 
+@media (max-width: 768px) {
+  .pics-name {
+    display: none; } }
 .pics-name {
   position: absolute;
   font-size: 60px;
-  z-index: 100;
+  z-index: 50;
   opacity: 0; }
   .pics-name.active {
     opacity: 1; }
 
 .p-first {
-  color: #aaa;
+  color: #c5c5c5;
   top: 70%;
   left: 40%;
   -webkit-transform: translateX(-200px);
@@ -167,7 +210,12 @@ body {
   -moz-transition: all 1s;
   -ms-transition: all 1s;
   -o-transition: all 1s;
-  transition: all 1s; }
+  transition: all 1s;
+  -webkit-text-shadow: 0 0 5px black;
+  -moz-text-shadow: 0 0 5px black;
+  -ms-text-shadow: 0 0 5px black;
+  -o-text-shadow: 0 0 5px black;
+  text-shadow: 0 0 5px black; }
   .p-first.active {
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -188,7 +236,12 @@ body {
   -moz-transition: all 1s ease 0.7s;
   -ms-transition: all 1s ease 0.7s;
   -o-transition: all 1s ease 0.7s;
-  transition: all 1s ease 0.7s; }
+  transition: all 1s ease 0.7s;
+  -webkit-text-shadow: 0 0 5px white;
+  -moz-text-shadow: 0 0 5px white;
+  -ms-text-shadow: 0 0 5px white;
+  -o-text-shadow: 0 0 5px white;
+  text-shadow: 0 0 5px white; }
   .p-last.active {
     -webkit-transform: translateX(0);
     -moz-transform: translateX(0);
@@ -235,6 +288,7 @@ body {
 .ctext-content {
   color: #555;
   margin-top: 20px;
+  margin-bottom: 50px;
   padding: 20px 40px;
   -webkit-border-radius: 10px 0 10px 0;
   -moz-border-radius: 10px 0 10px 0;
