--- a/works/test_for_cucumber_Neal/src/scss/index.scss
+++ b/works/test_for_cucumber_Neal/src/scss/index.scss
@@ -62,7 +62,7 @@ body{
 }
 
 .bg-bottom{
-    background: #f5f5f5;
+    background: #e7e7e7;
 }
 
 /* menu area */
@@ -89,6 +89,52 @@ body{
     
     &.click{
         @include transform(translateX(5px));
+    }
+}
+
+@media (min-width: 768px){
+    .menu-top{
+        display: none;
+    }
+}
+
+.menu-top{
+    cursor: pointer;
+    
+    &:hover{
+        background: #eee;
+    }
+    
+    .glyphicon{
+        @include transition(transform 0.8s);
+        
+        &.back{
+            @include transform(rotateY(180deg));
+        }
+    }
+}
+
+.menu-xs{
+    padding-left: 5px;
+    padding-right: 0;
+    
+    .menu-item{
+        padding-left: 5px;
+        text-overflow: clip;
+    }
+    
+    .menu-container{
+        width: 100%;
+        @include transition(width 0.8s);
+    }
+    
+    .menu-container.open1{
+        position: absolute;
+        z-index: 100;
+    }
+    
+    .menu-container.open2{
+        width: 260%;
     }
 }
 
@@ -152,7 +198,7 @@ body{
             width: 100%;
             overflow: hidden;
             @include transition(left 0.5s, width 1s ease 0.5s, transform 1.5s, height 0.5s ease 0.5s, opacity 1s ease 1s);  //margin 1s
-            border-top: 16px solid #000000;
+//          border-top: 16px solid #000000;
             
             @media (max-width: 768px){
                 &{
@@ -163,6 +209,10 @@ body{
             // explanation of this formula
             // $gap-before * 100% = x * $length-col-1
             // 0.15% * 100%(length of row) = x * 8.33%(length of col-1)
+            
+            &.ten{
+                display: none;
+            }
             
             &:after{
                 content: "";
@@ -247,10 +297,16 @@ body{
     
 }
 
+@media (max-width: 768px){
+    .pics-name{
+         display: none;
+    }
+}
+            
 .pics-name{
   position: absolute;
   font-size: 60px;
-  z-index: 100;
+  z-index: 50;
   
   opacity: 0;
   
@@ -260,11 +316,12 @@ body{
 }
 
 .p-first{
-    color: #aaa;
+    color: #c5c5c5;
     top: 70%;
     left: 40%;
     @include transform(translateX(-200px));
     @include transition(all 1s);
+    @include text-shadow(0 0 5px black);
     
     &.active{
       @include transform(translateX(0));
@@ -277,6 +334,7 @@ body{
     left: 60%;
     @include transform(translateX(200px));
     @include transition(all 1s ease 0.7s);
+    @include text-shadow(0 0 5px white);
     
     &.active{
       @include transform(translateX(0));
@@ -308,6 +366,7 @@ body{
 //  background: rgba(184, 200, 206, 0.29);
     color: #555;
     margin-top: 20px;
+    margin-bottom: 50px;
     padding: 20px 40px;
     @include border-radius(10px 0 10px 0);
     @include box-shadow(5px 5px 5px #79bcd6);
